# turtlebot3_simulations

./: .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Dockerfile  README.md  ros2_entrypoint.sh  simple_commander_api_template.py  turtlebot3_simulations_ci.repos
my_robot_controller/: package.xml  setup.cfg  setup.py
my_robot_controller/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
my_robot_controller/log/: latest_build
swarm/: package.xml  setup.cfg  setup.py
swarm/launch/: main.launch.py  multi_spawn.launch.py  spawn_tb3.launch.py  spawn_tb3.py
swarm/rviz/: tb3_gazebo.rviz
swarm/swarm/: pubsub.py  spawn_tb3.py  swarm.py
turtlebot3_fake/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_fake/launch/: turtlebot3_fake.launch
turtlebot3_fake/src/: turtlebot3_fake.cpp
turtlebot3_fake_node/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_fake_node/launch/: rviz2.launch.py  turtlebot3_fake_node.launch.py
turtlebot3_fake_node/param/: burger.yaml  waffle.yaml  waffle_pi.yaml
turtlebot3_fake_node/src/: turtlebot3_fake_node.cpp
turtlebot3_gazebo/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
turtlebot3_gazebo/launch/: empty_world.launch  empty_world.launch.py  multi_amcl.launch  multi_move_base.launch  multi_robot.launch.py  multi_spawn_turtlebot3.launch.py  multi_turtlebot3.launch  multi_turtlebot3_all.launch  multi_turtlebot3_single.launch  multi_turtlebot3_slam.launch  my_world.launch.py  robot_state_publisher.launch.py  spawn_turtlebot3.launch.py  turtlebot3_autorace.launch  turtlebot3_autorace.launch.py  turtlebot3_autorace_2020.launch  turtlebot3_autorace_2020.launch.py  turtlebot3_autorace_2025.launch.py  turtlebot3_dqn_stage1.launch.py  turtlebot3_dqn_stage2.launch.py  turtlebot3_dqn_stage3.launch.py  turtlebot3_dqn_stage4.launch.py  turtlebot3_drive.launch  turtlebot3_empty_world.launch  turtlebot3_gazebo_rviz.launch  turtlebot3_home_service_challenge.launch.py  turtlebot3_house.launch  turtlebot3_house.launch.py  turtlebot3_my_ghar.launch.py  turtlebot3_simulation.launch  turtlebot3_stage_1.launch  turtlebot3_stage_2.launch  turtlebot3_stage_3.launch  turtlebot3_stage_4.launch  turtlebot3_world.launch  turtlebot3_world.launch.py
turtlebot3_gazebo/maps/: tb3_1_map.pgm  tb3_3_map.pgm  whole_map.yaml
turtlebot3_gazebo/models/: turtlebot3.world
turtlebot3_gazebo/params/: turtlebot3_burger_bridge.yaml  turtlebot3_waffle_bridge.yaml  turtlebot3_waffle_pi_bridge.yaml
turtlebot3_gazebo/rviz/: multi_turtlebot3_slam.rviz  tb3_gazebo.rviz  turtlebot3_gazebo_model.rviz
turtlebot3_gazebo/src/: gazebo_ros_turtlebot3.cpp  moving_obstacle.cc  obstacle1.cpp  obstacle2.cpp  obstacles.cpp  traffic_bar_plugin.cpp  traffic_light_plugin.cpp  turtlebot3_drive.cpp
turtlebot3_gazebo/urdf/: common_properties.urdf  turtlebot3_burger.urdf  turtlebot3_burger_cam.urdf  turtlebot3_waffle.urdf  turtlebot3_waffle_pi.urdf
turtlebot3_gazebo/worlds/: TB3_maze_simulation.world  autorace.world  dans_basic_maze.world  dans_basic_maze_mod.world  dans_monstor_maze.world  empty.world  empty_world.world  my_world.world  traffic.world  turtlebot3.world  turtlebot3_autorace.world  turtlebot3_autorace_2020.world  turtlebot3_autorace_2025.world  turtlebot3_autorace_burger.world  turtlebot3_autorace_waffle.world  turtlebot3_double_house.world  turtlebot3_dqn_stage1.world  turtlebot3_dqn_stage2.world  turtlebot3_dqn_stage3.world  turtlebot3_dqn_stage4.world  turtlebot3_house.world  turtlebot3_ros2_demo.world  turtlebot3_stage_1.world  turtlebot3_stage_2.world  turtlebot3_stage_3.world  turtlebot3_stage_4.world  turtlebot3_world.world
turtlebot3_gazebo_plugin/: CHANGELOG.rst  CMakeLists.txt  README.md  burger.cc  burger.world  image_listener.cc  lidar_listener.cc  package.xml  turtlebot3.cc  turtlebot3.world  turtlebot3_burger.world  turtlebot3_waffle.world  turtlebot3_waffle_pi.world
turtlebot3_gazebo_plugin/src/: image_listener.cc  lidar_listener.cc  turtlebot3.cc
turtlebot3_gazebo_plugin/world/: turtlebot3_waffle.world
turtlebot3_gazebo_plugin/worlds/: turtlebot3.world  turtlebot3_burger.world  turtlebot3_house.world  turtlebot3_waffle_pi.world
turtlebot3_gazebo_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_gazebo_ros/launch/: control_multi_turtlebot3.launch  multi_map_merge.launch  multi_turtlebot3.launch  multi_turtlebot3_slam.launch  turtlebot3_empty_world.launch  turtlebot3_gazebo_rviz.launch  turtlebot3_house.launch  turtlebot3_simulation.launch  turtlebot3_world.launch
turtlebot3_gazebo_ros/rviz/: multi_turtlebot3_slam.rviz  turtlebot3_gazebo_model.rviz
turtlebot3_gazebo_ros/src/: turtlebot3_drive.cpp
turtlebot3_gazebo_ros/worlds/: turtlebot3_house.world
turtlebot3_ignition/: CMakeLists.txt  package.xml
turtlebot3_ignition/config/: turtlebot3_burger.yaml  turtlebot3_waffle.yaml  turtlebot3_waffle_pi.yaml
turtlebot3_ignition/gui/: gui.config
turtlebot3_ignition/launch/: control.launch.py  ignition.launch.py  robot_state_publisher.launch.py  ros_ign_bridge.launch.py  rviz.launch.py
turtlebot3_ignition/rviz/: tb3_ignition.rviz
turtlebot3_ignition/src/: republisher_cmd.cpp
turtlebot3_ignition/urdf/: turtlebot3_burger.urdf  turtlebot3_ignition.urdf  turtlebot3_waffle.urdf  turtlebot3_waffle_pi.urdf
turtlebot3_ignition/worlds/: empty.sdf
turtlebot3_manipulation_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
turtlebot3_manipulation_gazebo/config/: gazebo_controller_manager.yaml  hardware_controller_manager.yaml
turtlebot3_manipulation_gazebo/gazebo/: open_manipulator_x.gazebo.xacro  turtlebot3_waffle_pi.gazebo.xacro
turtlebot3_manipulation_gazebo/launch/: base.launch.py  fake.launch.py  gazebo.launch.py  turtlebot3_home_service_challenge.launch.py
turtlebot3_manipulation_gazebo/ros2_control/: turtlebot3_manipulation_system.ros2_control.xacro
turtlebot3_manipulation_gazebo/rviz/: turtlebot3_manipulation.rviz
turtlebot3_manipulation_gazebo/urdf/: open_manipulator_x.urdf.xacro  (+2 more)
turtlebot3_simulations/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+409 files in other folders)
