<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>swarm</name>
  <version>1.0.0</version>
  <description>tb3 swarm</description>
  <maintainer email="swadhin12a@gmail.com">swadhin</maintainer>
  <license>Apache License 2.0</license>
	
	
  <depend>rclpy</depend>
  

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

	<exec_depend>std_msgs</exec_depend>
	<exec_depend>geometry_msgs</exec_depend>
	<exec_depend>gazebo_msgs</exec_depend>
	<exec_depend>turtlebot3_gazebo</exec_depend>

</package>
