<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_gazebo_plugin</name>
  <version>0.2.0</version>
  <description>
    Gazebo standalone simulation package for the TurtleBot3
  </description>
  <license>Apache 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_simulations</url>
  <url type="website">http://turtlebot3.robotis.com</url>
  <buildtool_depend>catkin</buildtool_depend>
</package>
