<?xml version="1.0"?>
<package>
  <name>turtlebot3_simulations</name>
  <version>0.1.7</version>
  <description>
    ROS packages for the turtlebot3 simulation (meta package)
  </description>
  <license>Apache License 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_simulations</url>
  <url type="website">http://turtlebot3.robotis.com</url>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>turtlebot3_fake</run_depend>
  <run_depend>turtlebot3_gazebo</run_depend>
  <export><metapackage/></export>
</package>
